; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_show-branch.c_get_color_reset_code.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_show-branch.c_get_color_reset_code.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@showbranch_use_color = common dso_local global i32 0, align 4
@GIT_COLOR_RESET = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* ()* @get_color_reset_code to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_color_reset_code() #0 {
  %1 = alloca i8*, align 8
  %2 = load i32, i32* @showbranch_use_color, align 4
  %3 = call i64 @want_color(i32 %2)
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %7

5:                                                ; preds = %0
  %6 = load i8*, i8** @GIT_COLOR_RESET, align 8
  store i8* %6, i8** %1, align 8
  br label %8

7:                                                ; preds = %0
  store i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), i8** %1, align 8
  br label %8

8:                                                ; preds = %7, %5
  %9 = load i8*, i8** %1, align 8
  ret i8* %9
}

declare dso_local i64 @want_color(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
